--- a/README.me
+++ b/README.me
@@ -3,7 +3,7 @@ Final Project AM170A Inquiry 3: Bacteria Insulin Production
 Members:
 	-Kevin Silberberg
 	-Sebastian Osorio
-	-Zoë Laclair
+	-Zoë La Clair
 
 Project Hypothesis Ideas:
 
