added Idea 2, overleaf project link
modified data.py to be played with later

--- a/README.me
+++ b/README.me
@@ -5,6 +5,8 @@ Members:
 	-Sebastian Osorio
 	-Zoë La Clair
 
+OVERLEAF project: https://www.overleaf.com/project/65d4f388070c1edbf4ea2abe
+
 Project Hypothesis Ideas:
 
 we know that the logarithmic model:
@@ -32,3 +34,17 @@ by adding a 3rd dimention to the system:
 	dS/dt = F(B, I, S) 
 
 where S(t) is the sugar concentration in solution. 
+
+Idea 2:
+
+if we just add a -constant term to the dI/dt equation in the logarithmic model,
+can we find a value that maximizes the insulin produced. 
+
+thoughts:
+	
+	is it realistic to remove a constant value from the equation?
+	what if the amount of insulin we are removing depends on the
+	amount currently present in solution? and we vary some parameter 
+	that scales this amount. 
+	
+		
