updated the README

--- a/README.me
+++ b/README.me
@@ -41,10 +41,12 @@ if we just add a -constant term to the dI/dt equation in the logarithmic model,
 can we find a value that maximizes the insulin produced. 
 
 thoughts:
-	
-	is it realistic to remove a constant value from the equation?
-	what if the amount of insulin we are removing depends on the
-	amount currently present in solution? and we vary some parameter 
-	that scales this amount. 
+
+	only having a -constant term is ill posed because at t = 0 you could extact insulin when there is no insulin to extract.
+
+	the extraction term in the diff eq should be something like $-\lambda I$, where $\lambda$ is a extraction rate parameter,
+	such that the amount of insulin extracted per time step is proportional to the amount of insulin in the system.  
+	This is more consistent with 'filtering' models where the amount of particles you are filtering per unit time, 
+	depends on the density or the amount of particles per unit volume in the system. 
 	
 		
