Added small note from what Kevin said during lecture

--- a/README.me
+++ b/README.me
@@ -48,4 +48,4 @@ such that the amount of insulin extracted per time step is proportional to the a
 This is more consistent with 'filtering' models where the amount of particles you are filtering per unit time, 
 depends on the density or the amount of particles per unit volume in the system. 
 	
-		
+We can include how much energy is wasted when we extract insulin. Similar to the air filter concept Kevin was talking about in class. 
