Meeting with Hayley-1

--- a/README.me
+++ b/README.me
@@ -48,4 +48,13 @@ such that the amount of insulin extracted per time step is proportional to the a
 This is more consistent with 'filtering' models where the amount of particles you are filtering per unit time, 
 depends on the density or the amount of particles per unit volume in the system. 
 	
-We can include how much energy is wasted when we extract insulin. Similar to the air filter concept Kevin was talking about in class. 
+We can include how much energy is wasted when we extract insulin. Similar to the air filter concept Kevin was talking about in class.
+
+Hayley told us that for the di_dt we have to add another term that relates to how the rest of the system is affected. So basically
+we need to delete bacteria as we are extracting bacteria. 
+
+dS_dt = sugar is subtracted by population
+
+The only thing is that we need a sugar dataset to validate our model. We can look it up online and see what exists.
+Alternatively, we can create a sugar dataset; but, we have to state how it was based off of other datasets.
+
