added a questoion to README.me

--- a/README.me
+++ b/README.me
@@ -49,3 +49,6 @@ This is more consistent with 'filtering' models where the amount of particles yo
 depends on the density or the amount of particles per unit volume in the system. 
 	
 		
+What is our question?
+
+We aim to maximize the amount of insulin production by finding the maximum amount of insulin we can extract from the system without bacterial population collapse?
