More notes from Hayley's conversation

--- a/README.me
+++ b/README.me
@@ -58,3 +58,16 @@ dS_dt = sugar is subtracted by population
 The only thing is that we need a sugar dataset to validate our model. We can look it up online and see what exists.
 Alternatively, we can create a sugar dataset; but, we have to state how it was based off of other datasets.
 
+For additional work with can talk about Taken's theorem instead of doing it. Basically because its much harder
+than what we expect it to be. 
+
+Todo List from Hayley:
+1. come up with modified model for the siponening data di_dt = growth * N - somevalue * N *I - [ death of bacteria based on extration * N ]
+	Add a constant to the carrying capacity. 
+2. pause on the sugar one until we find data
+
+3. Formulate a question for this. *very important*
+Dont ask "what will happen" or "what does this do"
+* We want measureable results. If we ask a question, and there is no data that doesn't support it. 
+
+We can add a section about cost 
