add paper on the effects of nutrient concentration on growth rate

--- a/README.me
+++ b/README.me
@@ -25,6 +25,9 @@ with initial conditions
 
 where B(t), I(t) are Bacterial population and Insulin concentration at time t.
 
+	paper about nutrient concentration and growth rate:
+	https://www.ncbi.nlm.nih.gov/pmc/articles/PMC246906/pdf/jbacter00368-0228.pdf
+
 
 Idea 1:
 
